[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.17"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.70"
structopt = "0.3.25"
tokio = { version = "1.13.0", features = ["full"] }
